--- a/src/contentStyle.css
+++ b/src/contentStyle.css
@@ -6,9 +6,48 @@
     display:none;
 }
 
-.breezy-blind-toggled .avatar, 
-.breezy-blind-toggled .activity-body {
+.breezy-blind-toggled .avatar {
     -webkit-filter: blur(2px) grayscale(100%);
+}
+.breezy-blind-toggled .content-section:not(.candidate-conversation) .activity-body {
+    overflow:hidden;
+}
+.breezy-blind-toggled .content-section:not(.candidate-conversation) .activity-body p {
+    position:relative;
+    color:#fafafa;
+    background-color:#fafafa;
+    -webkit-filter: blur(2px);
+}
+.breezy-blind-toggled .content-section:not(.candidate-conversation) .activity-body p ~ p {
+    display:none;
+}
+.breezy-blind-toggled .content-section:not(.candidate-conversation) .activity-body:after {
+    display:block;
+    content:" ";
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:12px;
+    height:15px;
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(250,250,250,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(250,250,250,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(250,250,250,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF00', endColorstr='#fafafa',GradientType=0 ); /* IE6-9 */
+}
+.breezy-blind-toggled .content-section:not(.candidate-conversation) .activity-body p:after {
+    display:block;
+    position:absolute;
+    content:"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nunc magna, faucibus sit amet dictum in, finibus vitae est. Proin ac orci sagittis purus auctor pharetra eu scelerisque ante. Donec a hendrerit erat, id hendrerit libero. Nullam non consectetur justo, a molestie quam. Nullam sed nulla non massa interdum scelerisque. Aliquam ut sem risus. Nullam neque massa, maximus sit amet vehicula eu, consequat vitae odio. Integer eget nunc porta, volutpat mauris id, efficitur nisi. Nunc nibh urna, consectetur vel est et, consequat tincidunt sem. Aenean ullamcorper dui sed augue ultrices, ac porttitor nibh rutrum. Pellentesque iaculis purus ac sem euismod, sit amet blandit lacus bibendum. Fusce in dui sapien. Vestibulum quis ex id mi semper semper. Praesent imperdiet dignissim maximus. Vestibulum id elementum mauris. Maecenas velit ex, scelerisque at metus nec, congue interdum lacus. Nam viverra, ex sed posuere pretium, nisl orci ornare arcu, eget bibendum ipsum turpis id risus. Integer vel libero eget nisl accumsan varius. Mauris aliquam, neque sit amet tristique lobortis, augue quam lacinia nulla, sed sodales massa augue a massa. Maecenas ut venenatis ex. Curabitur et massa commodo ex posuere sagittis. Aliquam porttitor in purus et dapibus." !important;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    font-size: 12px;
+    font-weight: normal;
+    background:white;
+    color:#333;
+    z-index:1000;
+    -webkit-filter: blur(2px);
 }
 
 .breezy-blind-toggled .main .candidate-list .candidate .score,
